# cli

./: Cargo.toml  README.md
src/: editor.rs
