[package]
name = "beagleeditor-cli"
description = "BeagleEditor CLI is back! with memory-safety and performance!"
version = "0.1.0"
authors = ["BeagleSoftware <mani.arasteh92@gmail.com"]
edition = "2021"
repository = "https://github.com/beagleeditor/cli.git"
license = "MIT"

[[bin]]
name = "becli"
path = "src/main.rs"

[dependencies]
termion = "4.0.5"
unicode-segmentation = "1"

